To test git agin

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
              tenetur accusantium dicta, aspernatur deserunt dolorem adipisci? Reprehenderit cum 
              voluptatum aspernatur fuga nostrum porro vitae?</p>
     </div>
+    <div>
+        <input type="button" value="GIT ok" id="git_ok_buttom" ref="google.com">
+    </div>
     <script src="/js/javascript.js"></script>
     
 </body>
