--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
              voluptatum aspernatur fuga nostrum porro vitae?</p>
     </div>
     <div>
-        <input type="button" value="GIT ok" id="git_ok_buttom" ref="google.com">
+        <input type="button" value="GIT ok" id="git_ok_buttom" href="bing ol">
+    </div>
+    <div>
+        <a href="bing.com" id="to_search" >GOOOOOOGLE</a>
     </div>
     <script src="/js/javascript.js"></script>
     
