--- a/index.html
+++ b/index.html
@@ -23,6 +23,24 @@
         <a href="bing.com" id="to_search" >GOOOOOOGLE</a>
     </div>
     <script src="/js/javascript.js"></script>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Totam inventore eaque voluptatem nostrum exercitationem repudiandae, 
+             tenetur accusantium dicta, aspernatur deserunt dolorem adipisci? Reprehenderit cum 
+             voluptatum aspernatur fuga nostrum porro vitae?</p>
+    </div>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Totam inventore eaque voluptatem nostrum exercitationem repudiandae, 
+             tenetur accusantium dicta, aspernatur deserunt dolorem adipisci? Reprehenderit cum 
+             voluptatum aspernatur fuga nostrum porro vitae?</p>
+    </div>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Totam inventore eaque voluptatem nostrum exercitationem repudiandae, 
+             tenetur accusantium dicta, aspernatur deserunt dolorem adipisci? Reprehenderit cum 
+             voluptatum aspernatur fuga nostrum porro vitae?</p>
+    </div>
     
 </body>
 </html>
